--- a/string.html
+++ b/string.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
+  <title>String Graph Representation</title>
 </head>
 <body>
   Hello World !!!
